# Siemens-Assessment-2024

./: .gitignore  .gitmodules  README.md
Assignment_1/: README.md
Assignment_1/docs/: TESTS.md
Assignment_1/src/: Makefile  README.md  app.py  client.py  server.py
Assignment_1/src/outputs/: test_three_input.csv
Assignment_1/src/tests/: test_client.py  test_server.py  test_system_options.py
Assignment_2/: CMakeLists.txt  MakeFile  README.md
Assignment_2/docs/: REPORT.md  TESTS.md
Assignment_2/src/: CMakeLists.txt  main.cpp  packet.h
Assignment_2/src/output/: packet_validation.csv
Assignment_2/src/test/: CMakeLists.txt  test_packet.cpp
